.provarCaches/00D410000011HE0EAM/objects/rstkf__batchapexdump__c.object
<CustomObject>
    <description>Store TEMPORARILY the batch apex output data, to be consumed by ControllerExtn.</description>
    <fields>
        <fullName>rstkf__gl_processlog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GLProcesslog</label>
        <referenceTo>rstkf__processlogf__c</referenceTo>
        <relationshipLabel>BatchApex Output Dumps</relationshipLabel>
        <relationshipName>BatchApex_Output_Dumps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnrecs_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Master</label>
        <referenceTo>rstk__sycmp__c</referenceTo>
        <relationshipLabel>BatchApex Output Dumps</relationshipLabel>
        <relationshipName>BatchApex_Output_Dumps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnrecs_record__c</fullName>
        <label>Object Record</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnrecs_seq__c</fullName>
        <label>Sequence</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnrecs_syuser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>gltxnrecs_dumps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnrecs_txndate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>BatchApex Output Dump</label>
    <nameField>
        <label>BatchApex Output Dump Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BatchApex Output Dumps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>